--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
 <footer class="container">
 	<p class="float-right"><a href="#">Back to top</a></p>
-	<p>&copy; Mark McDonald &middot; </p>
+	<p>&copy; Mark McDonald </p>
 </footer>
