--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,12 +30,12 @@
     </style>
 
     <!-- Custom styles for this template -->
-    <link rel="stylesheet" href="static/home/home.css" />
+    <link rel="stylesheet" href="/static/home/home.css" />
   </head>
   
   <body>
   	<header>
-  		{% include menu.html%}
+  		{% include menu.html %}
   	</header>
   	<main role="main">
   		{{ content }}
