added project pages

--- a/_includes/headlines.html
+++ b/_includes/headlines.html
@@ -14,7 +14,7 @@
 	<div class="tagline_row">
 	  <p>Deep learning models to find a navigable path in a video sequence.  No-frills chat application.  Image Collection Network of Raspberry Pi's</p>
 	</div>
-	<p><a class="btn btn-secondary" href="#" role="button">See Project Examples &raquo;</a></p>
+	<p><a class="btn btn-secondary" href="/projects.html" role="button">See Project Examples &raquo;</a></p>
   </div><!-- /.col-lg-4 -->
   <div class="col-lg-4">
 	<img src="static/images/gears.png" class="rounded mx-auto d-block" width="140" height="140" alt="Projects" />
