--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-blue">
-    <a class="navbar-brand" href="#">{{ page.author }}</a>
+    <a class="navbar-brand" href="/">{{ page.author }}</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -17,11 +17,11 @@
         
         {% if page.url == "/resume.html"  %}
 			<li class="nav-item">
-				<a class="nav-link pr-0 disabled" href="resume.html">Resume</a>
+				<a class="nav-link pr-0 disabled" href="/resume.html">Resume</a>
 			</li>
         {% else %}
 			<li class="nav-item active">
-				<a class="nav-link pr-0" href="resume.html">Resume</a>
+				<a class="nav-link pr-0" href="/resume.html">Resume</a>
 			</li>
         {% endif %}
         
@@ -31,11 +31,11 @@
         
         {% if page.url == "/course_summary.html"  %}
 			<li class="nav-item">
-				<a class="nav-link pr-0 disabled" href="course_summary.html">Course Summary</a>
+				<a class="nav-link pr-0 disabled" href="/course_summary.html">Course Summary</a>
 			</li>
         {% else %}
 			<li class="nav-item active">
-				<a class="nav-link pr-0" href="course_summary.html">Course Summary</a>
+				<a class="nav-link pr-0" href="/course_summary.html">Course Summary</a>
 			</li>
         {% endif %}
         
@@ -48,8 +48,13 @@
           Projects
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+<!-- 
         {% for project in site.data.projects %}
           <a class="dropdown-item" href={{ project.project_page }}>{{ project.project_name }}</a>
+        {% endfor %}
+ -->
+        {% for project in site.projects %}
+          <a class="dropdown-item" href={{ project.url }}>{{ project.project_name }}</a>
         {% endfor %}
         </div>
       </li>
