added project pages

--- a/_includes/headlines.html
+++ b/_includes/headlines.html
@@ -1,26 +1,26 @@
 
 <div class="row">
   <div class="col-lg-4">
-	<img src="static/images/harvard_shield_wreath.png" class="rounded mx-auto d-block" width="140" height="140" alt="Harvard Shield" />
-	<h2>Harvard Extension / Software Engineering</h2>
+	<img src="static/images/harvard_shield_wreath.png" class="rounded mx-auto d-block" width="120" height="120" alt="Harvard Shield" />
+	<h2>Harvard Studies in Extension</h2>
 	<div class="tagline_row">
-	  <p>Certificate in data science with coursework target towards computer vision problems.</p>
+	  <p>Software Engineering - Certificate in data science with focus on computer vision</p>
 	</div>
 	<p><a class="btn btn-secondary" href="course_summary.html" role="button">Review Coursework &raquo;</a></p>
   </div><!-- /.col-lg-4 -->
   <div class="col-lg-4">
-	<img src="static/images/digital_circuit.jpg" class="rounded mx-auto d-block" width="140" height="140" alt="Projects" />
-	<h2>Example Projects</h2>
+	<img src="static/images/digital_circuit.jpg" class="rounded mx-auto d-block" width="120" height="120" alt="Projects" />
+	<h2>Academic Projects</h2>
 	<div class="tagline_row">
-	  <p>Deep learning models to find a navigable path in a video sequence.  No-frills chat application.  Image Collection Network of Raspberry Pi's</p>
+	  <p>Collection of academic projects demonstrating skills and technologies</p>
 	</div>
 	<p><a class="btn btn-secondary" href="/projects.html" role="button">See Project Examples &raquo;</a></p>
   </div><!-- /.col-lg-4 -->
   <div class="col-lg-4">
-	<img src="static/images/gears.png" class="rounded mx-auto d-block" width="140" height="140" alt="Projects" />
-	<h2>Business Experience</h2>
+	<img src="static/images/gears.png" class="rounded mx-auto d-block" width="120" height="120" alt="Projects" />
+	<h2>Experience</h2>
 	<div class="tagline_row">
-	  <p>Broad business experience:  Director of Finance at Large Equipment Manufacturer.  Global Mergers & Acquisitions.  Project Management.  Work Abroad.  Systems Implementations.  CIO.</p>
+	  <p>Broad business experience including financial and technology leadership, Global M&A and Project Management</p>
 	</div>
 	<p><a class="btn btn-secondary" href="resume.html" role="button">View Resume &raquo;</a></p>
   </div><!-- /.col-lg-4 -->
