--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,9 +1,9 @@
 <div class="row">
-	<div class="col-2"></div>
-	<div class="jumbotron col-8 bg-blue my-4 py-5">
+	<div class="col-1"></div>
+	<div class="jumbotron col-10 bg-blue my-4 py-4">
 
 		<p class="lead">
-			After a career in corporate financial and technology management, I am pursuing a degree in Software Engineering with a focus in Data Science.
+			With a background in financial and technology management, I am completing a Masters degree in Software Engineering with a certificate in Data Science.
 		</p>
 
 		<p class="lead">
@@ -11,9 +11,9 @@
 		</p>
 
 		<p class="lead">
-			I believe that Deep Learning can be applied to nearly all aspects of business and will become a critical success factor in the immediate future.  My goal is to help businesses exploit these technologies to improve their customers’ experience as well as their employee satisfaction and performance.
+			I believe that Deep Learning can be applied to a broad range of business topics and is an underutilized success factor.  My goal is to help businesses exploit advanced technologies to improve their customers’ experience while increasing employee satisfaction and performance.
 		</p>
 
 	</div> <!-- jumbotron -->
-	<div class="col-2"></div>
+	<div class="col-1"></div>
 </div> <!-- row -->
