--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,5 +1,6 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-blue">
-    <a class="navbar-brand" href="/">{{ page.author }}</a>
+    <div class="navbar-brand">{{ page.author }}</div>
+    
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
