added covid tracker to projects

--- a/_includes/headlines.html
+++ b/_includes/headlines.html
@@ -1,27 +1,47 @@
 
 <div class="row">
-  <div class="col-lg-4">
-	<img src="static/images/harvard_shield_wreath.png" class="rounded mx-auto d-block" width="120" height="120" alt="Harvard Shield" />
-	<h2>Harvard Studies in Extension</h2>
-	<div class="tagline_row">
-	  <p>Software Engineering - Certificate in data science with focus on computer vision</p>
+
+	<div class="col-12 col-md-4 px-1 my-2 ">
+		<div class="card d-flex shadow">
+			<h4 class="card-header bg-blue">Education</h4>
+			<div class="card-body bg-lightblue align-items-stretch">
+				<h5 class="card-title mb-0">Harvard</h5>
+				<div class="card-text ">Master's Software Engineering / Data Science Certificate</div>
+				  <p></p>
+				<h5 class="card-title mb-0">Iowa State University</h5>
+				<div class="card-text ">Accounting / German</div>
+				  <p></p>
+
+			</div>
+			<div class="card-footer bg-blue">
+				<a href="course_summary.html" class="card-link">Coursework &raquo;</a>
+			</div>
+		</div>
 	</div>
-	<p><a class="btn btn-secondary" href="course_summary.html" role="button">Review Coursework &raquo;</a></p>
-  </div><!-- /.col-lg-4 -->
-  <div class="col-lg-4">
-	<img src="static/images/digital_circuit.jpg" class="rounded mx-auto d-block" width="120" height="120" alt="Projects" />
-	<h2>Academic Projects</h2>
-	<div class="tagline_row">
-	  <p>Collection of academic projects demonstrating skills and technologies</p>
+
+	<div class="col-12 col-md-4 px-1 my-2 d-flex">
+		<div class="card shadow">
+			<h4 class="card-header bg-blue">Projects</h4>
+			<div class="card-body bg-lightblue align-items-stretch">
+				<div class="card-text ">Collection of academic projects demonstrating skills and technologies</div>
+			</div>
+			<div class="card-footer bg-blue">
+				<a href="/projects.html" class="card-link">Projects &raquo;</a>
+			</div>
+		</div>
 	</div>
-	<p><a class="btn btn-secondary" href="/projects.html" role="button">See Project Examples &raquo;</a></p>
-  </div><!-- /.col-lg-4 -->
-  <div class="col-lg-4">
-	<img src="static/images/gears.png" class="rounded mx-auto d-block" width="120" height="120" alt="Projects" />
-	<h2>Experience</h2>
-	<div class="tagline_row">
-	  <p>Broad business experience including financial and technology leadership, Global M&A and Project Management</p>
+
+	<div class="col-12 col-md-4 px-1 my-2 d-flex">
+		<div class="card shadow">
+			<h4 class="card-header bg-blue">Experience</h4>
+			<div class="card-body bg-lightblue align-items-stretch">
+				<div class="card-text">Broad business experience including financial and technology leadership, Global M&A and Project Management</div>
+			</div>
+			<div class="card-footer bg-blue">
+				<a href="resume.html" class="card-link">See Resume &raquo;</a>
+			</div>
+		</div>
 	</div>
-	<p><a class="btn btn-secondary" href="resume.html" role="button">View Resume &raquo;</a></p>
-  </div><!-- /.col-lg-4 -->
+
+
 </div><!-- /.row -->
