--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,19 +1,28 @@
 <div class="row">
-	<div class="col-1"></div>
-	<div class="jumbotron col-10 bg-blue my-4 py-4">
+<!--	<div class="col-1"></div>-->
+	<div class="jumbotron shadow-sm col-10 my-4 py-4 mx-auto">
+		<div class="row" display="inline-block">
+			<img class="col-12 col-sm-4 mx-auto my-2" style="max-width: 300px" width="100%" height="100%" src="static/images/profile_photo.jpg">
+			<div class="col-12 col-sm-8 mx-auto" style="font-size: 18px">
+				<p style="font-weight: bold"> Objective </p>
+				<p> I aim to bridge the gap between business needs and modern technical capabilities.</p>
+				<p style="font-weight: bold"> Qualifications </p>
+				<p> I have a degree in software engineering with a certificate in Data Science from Harvard.  I have
+					extensive experience in financial and technical management with a unique set of experiences
+					which position me well to understand a broad scope of business functions and markets:</p>
+				<ul>
+					<li>Controller of multi-location large engineered equipment manufacturer</li>
+					<li>Led numerous US and international new acquisition integrations</li>
+					<li>CIO of US Siemens Mobile Phone business</li>
+					<li>Led various small and large digital transformation efforts</li>
+					<li>Worked in Germany for 5 years (fluent in German)</li>
+				</ul>
 
-		<p class="lead">
-			With a background in financial and technology management, I am completing a Masters degree in Software Engineering with a certificate in Data Science.
-		</p>
+			</div>
 
-		<p class="lead">
-			I aim to combine my business and technical skills to deliver A.I. solutions to small and medium-sized businesses.
-		</p>
 
-		<p class="lead">
-			I believe that Deep Learning can be applied to a broad range of business topics and is an underutilized success factor.  My goal is to help businesses exploit advanced technologies to improve their customers’ experience while increasing employee satisfaction and performance.
-		</p>
+		</div>
 
 	</div> <!-- jumbotron -->
-	<div class="col-1"></div>
+<!--	<div class="col-1"></div>-->
 </div> <!-- row -->
