--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-blue">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-blue shadow">
     <div class="navbar-brand">{{ page.author }}</div>
     
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -27,7 +27,7 @@
         {% endif %}
         
         <li class="nav-item active">
-          <a class="nav-link pl-1" href="/static/mark_mcdonald_resume.pdf" download><img src="/static/images/download.svg" width="15" height="15"/></a>
+          <a class="nav-link pl-1" href="/static/mark_mcdonald_resume.pdf" download><img src="/static/images/icons8-download-24.png" width="15" height="15"/></a>
         </li>
         
         {% if page.url == "/course_summary.html"  %}
@@ -41,7 +41,7 @@
         {% endif %}
         
         <li class="nav-item active">
-          <a class="nav-link pl-1" href="/static/mark_mcdonald_course_summary.pdf" download><img src="/static/images/download.svg" width="15" height="15"/></a>
+          <a class="nav-link pl-1" href="/static/mark_mcdonald_course_summary.pdf" download><img src="/static/images/icons8-download-24.png" width="15" height="15"/></a>
         </li>
         
         <li class="nav-item dropdown active">
@@ -69,8 +69,20 @@
         {% endif %}
         
       </ul>
-      <a class="my-2 my-sm-0" href="mailto:mark.mcdonald1@icloud.com">
-      	<img src="/static/images/envelope-closed.svg" class="rounded mx-auto d-block" width="20" height="20" alt="eMail"/>
-      </a>
+        <div class="menu-icons m-2 my-sm-0">
+          <a href="https://www.linkedin.com/in/mcdonaldboston/" target="_blank">
+            <img src="/static/images/icons8-linkedin-24.png" class="rounded mx-auto d-block" width="20" height="20" alt="LinkedIn"/>
+          </a>
+        </div>
+        <div class="menu-icons m-2 my-sm-0">
+          <a href="https://github.com/mcdomx" target="_blank">
+            <img src="/static/images/icons8-github-24.png" class="rounded mx-auto d-block" width="20" height="20" alt="GitHub"/>
+          </a>
+        </div>
+        <div class="menu-icons m-2 my-sm-0">
+          <a href="mailto:mark.mcdonald1@icloud.com">
+            <img src="/static/images/icons8-email-24.png" class="rounded mx-auto d-block" width="20" height="20" alt="eMail"/>
+          </a>
+        </div>
     </div>
 </nav>
