--- a/_includes/headlines.html
+++ b/_includes/headlines.html
@@ -1,41 +1,52 @@
 
 <div class="row">
 
-	<div class="col-12 col-md-4 px-1 my-2 ">
-		<div class="card d-flex shadow">
+<!--	<div class="col-12 col-md-4 px-1 my-2 ">-->
+	<div class="w-100 my-3">
+		<div class="card d-flex shadow ">
 			<h4 class="card-header bg-blue">Education</h4>
 			<div class="card-body bg-lightblue align-items-stretch">
-				<h5 class="card-title mb-0">Harvard</h5>
+				<h5 class="card-title mb-0" style="font-weight: bold">Harvard</h5>
 				<div class="card-text ">Master's Software Engineering / Data Science Certificate</div>
 				  <p></p>
-				<h5 class="card-title mb-0">Iowa State University</h5>
+				<h5 class="card-title mb-0" style="font-weight: bold">Georgia State University</h5>
+				<div class="card-text ">Master's Computer Information Systems</div>
+				  <p></p>
+				<h5 class="card-title mb-0" style="font-weight: bold">Iowa State University</h5>
 				<div class="card-text ">Accounting / German</div>
 				  <p></p>
 
 			</div>
 			<div class="card-footer bg-blue">
-				<a href="course_summary.html" class="card-link">Coursework &raquo;</a>
+				<a href="course_summary.html" class="card-link">See Coursework &raquo;</a>
 			</div>
 		</div>
 	</div>
 
-	<div class="col-12 col-md-4 px-1 my-2 d-flex">
+
+<!--	<div class="col-12 col-md-4 px-1 my-2 d-flex">-->
+	<div class="w-100 my-3">
 		<div class="card shadow">
 			<h4 class="card-header bg-blue">Projects</h4>
 			<div class="card-body bg-lightblue align-items-stretch">
-				<div class="card-text ">Collection of academic projects demonstrating skills and technologies</div>
+				<div class="card-text ">A small collection of academic projects demonstrating skills and technologies</div>
 			</div>
 			<div class="card-footer bg-blue">
-				<a href="/projects.html" class="card-link">Projects &raquo;</a>
+				<a href="/projects.html" class="card-link">See Projects &raquo;</a>
 			</div>
 		</div>
 	</div>
 
-	<div class="col-12 col-md-4 px-1 my-2 d-flex">
+<!--	<div class="col-12 col-md-4 px-1 my-2 d-flex">-->
+	<div class="w-100 my-3">
 		<div class="card shadow">
 			<h4 class="card-header bg-blue">Experience</h4>
 			<div class="card-body bg-lightblue align-items-stretch">
-				<div class="card-text">Broad business experience including financial and technology leadership, Global M&A and Project Management</div>
+				<div class="card-text">
+					<p>I have accumulated a variety of experiences ranging from financial
+						and technical management to mergers & acquisitions and business process management.</p>
+					<p>I take pride in breaking complex efforts into manageable components and orchestrating solutions that otherwise seemed impossible.</p>
+				</div>
 			</div>
 			<div class="card-footer bg-blue">
 				<a href="resume.html" class="card-link">See Resume &raquo;</a>
