--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,11 +1,14 @@
-<div class="row">
+<div class="row" >
 <!--	<div class="col-1"></div>-->
-	<div class="jumbotron shadow-sm col-10 my-4 py-4 mx-auto">
-		<div class="row" display="inline-block">
-			<img class="col-12 col-sm-4 mx-auto my-2" style="max-width: 300px" width="100%" height="100%" src="static/images/profile_photo.jpg">
-			<div class="col-12 col-sm-8 mx-auto" style="font-size: 18px">
+	<div class="jumbotron shadow w-100" id="intro">
+		<div class="row" style="" >
+			<div class="col-lg-1"></div>
+			<div class="mx-auto mb-2">
+				<img class="shadow-lg rounded" style="max-width: 280px; max-height: 419px" width="100%" src="static/images/profile_photo.jpg">
+			</div>
+			<div class="col-sm-7 col-lg-6 mx-auto px-4" style="font-size: 18px;">
 				<p style="font-weight: bold"> Objective </p>
-				<p> I aim to bridge the gap between business needs and modern technical capabilities.</p>
+				<p> I aim combine my business experience and technical education to bridge the gap between business needs and modern technical capabilities.</p>
 				<p style="font-weight: bold"> Qualifications </p>
 				<p> I have a degree in software engineering with a certificate in Data Science from Harvard.  I have
 					extensive experience in financial and technical management with a unique set of experiences
@@ -14,13 +17,11 @@
 					<li>Controller of multi-location large engineered equipment manufacturer</li>
 					<li>Led numerous US and international new acquisition integrations</li>
 					<li>CIO of US Siemens Mobile Phone business</li>
-					<li>Led various small and large digital transformation efforts</li>
-					<li>Worked in Germany for 5 years (fluent in German)</li>
+					<li>Digital transformation project leadership</li>
+					<li>Worked in Germany for 5 years (fluent in German) at Siemens Corporate headquarters</li>
 				</ul>
-
 			</div>
-
-
+			<div class="col-lg-1 col-xl-2"></div>
 		</div>
 
 	</div> <!-- jumbotron -->
