--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-blue shadow">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-blue shadow" style="height: 75px">
     <div class="navbar-brand">{{ page.author }}</div>
     
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,11 +32,11 @@
         
         {% if page.url == "/course_summary.html"  %}
 			<li class="nav-item">
-				<a class="nav-link pr-0 disabled" href="/course_summary.html">Course Summary</a>
+				<a class="nav-link pr-0 disabled" href="/course_summary.html">Coursework</a>
 			</li>
         {% else %}
 			<li class="nav-item active">
-				<a class="nav-link pr-0" href="/course_summary.html">Course Summary</a>
+				<a class="nav-link pr-0" href="/course_summary.html">Coursework</a>
 			</li>
         {% endif %}
         
