layout and formatting

--- a/_includes/headlines.html
+++ b/_includes/headlines.html
@@ -43,8 +43,7 @@
 			<h4 class="card-header bg-blue">Experience</h4>
 			<div class="card-body bg-lightblue align-items-stretch">
 				<div class="card-text">
-					<p>I have accumulated a variety of experiences ranging from financial
-						and technical management to mergers & acquisitions and business process management.</p>
+					<p>I have accumulated a unique set of experiences through various roles, business types, locations and market circumstances.</p>
 					<p>I take pride in breaking complex efforts into manageable components and orchestrating solutions that otherwise seemed impossible.</p>
 				</div>
 			</div>
