--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -10,8 +10,9 @@
 				<p style="font-weight: bold"> Objective </p>
 				<p> I aim combine my business experience and technical education to bridge the gap between business needs and modern technical capabilities.</p>
 				<p style="font-weight: bold"> Qualifications </p>
-				<p> I have a degree in software engineering with a certificate in Data Science from Harvard.  I have
-					extensive experience in financial and technical management with a unique set of experiences
+				<p> I have a master's degree from Harvard in software engineering with a certificate in Data Science
+					with an undergraduate degree in Accounting.  I have accumulated
+					extensive experience in financial and technical management with a unique set of skills
 					which position me well to understand a broad scope of business functions and markets:</p>
 				<ul>
 					<li>Controller of multi-location large engineered equipment manufacturer</li>
