layout and formatting

--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -8,7 +8,7 @@
 			</div>
 			<div class="col-sm-7 col-lg-6 mx-auto px-4" style="font-size: 18px;">
 				<p style="font-weight: bold"> Objective </p>
-				<p> I aim combine my business experience and technical education to bridge the gap between business needs and modern technical capabilities.</p>
+				<p> I aim to combine my business experience and technical education to bridge the gap between business needs and modern technical capabilities.</p>
 				<p style="font-weight: bold"> Qualifications </p>
 				<p> I have a master's degree from Harvard in software engineering with a certificate in Data Science
 					with an undergraduate degree in Accounting.  I have accumulated
