layout and formatting

--- a/_includes/headlines.html
+++ b/_includes/headlines.html
@@ -6,16 +6,20 @@
 		<div class="card d-flex shadow ">
 			<h4 class="card-header bg-blue">Education</h4>
 			<div class="card-body bg-lightblue align-items-stretch">
-				<h5 class="card-title mb-0" style="font-weight: bold">Harvard</h5>
-				<div class="card-text ">Master's Software Engineering / Data Science Certificate</div>
-				  <p></p>
-				<h5 class="card-title mb-0" style="font-weight: bold">Georgia State University</h5>
-				<div class="card-text ">Master's Computer Information Systems</div>
-				  <p></p>
-				<h5 class="card-title mb-0" style="font-weight: bold">Iowa State University</h5>
-				<div class="card-text ">Accounting / German</div>
-				  <p></p>
-
+				<div class="container col-11 mx-auto">
+					<h5 class="card-title mb-0" style="font-weight: bold">Harvard Extension</h5>
+					<div class="card-text ">Master's Software Engineering</div>
+					<div class="card-text ">Certificate: Data Science</div>
+					  <p></p>
+					<h5 class="card-title mb-0" style="font-weight: bold">Georgia State University</h5>
+					<div class="card-text ">Master's Computer Information Systems</div>
+					<div class="card-text ">Focus: e-Commerce</div>
+					  <p></p>
+					<h5 class="card-title mb-0" style="font-weight: bold">Iowa State University</h5>
+					<div class="card-text ">B.B.A. Accounting</div>
+					<div class="card-text ">Minor: German</div>
+					  <p></p>
+				</div>
 			</div>
 			<div class="card-footer bg-blue">
 				<a href="course_summary.html" class="card-link">See Coursework &raquo;</a>
@@ -29,7 +33,19 @@
 		<div class="card shadow">
 			<h4 class="card-header bg-blue">Projects</h4>
 			<div class="card-body bg-lightblue align-items-stretch">
-				<div class="card-text ">A small collection of academic projects demonstrating skills and technologies</div>
+				<div class="container col-11 mx-auto">
+					<p class="card-text ">
+						A collection of academic projects demonstrating skills and technologies is linked below.
+						These projects demonstrate both technical software development work as well as problem solving using various deep learning tasks.
+					</p>
+
+					<p class="card-text ">
+						These projects highlight a proficiency in Python using both Flask and Django to present web pages; however, I
+						am also able to comfortably use Java for development.  Deep Learning efforts include various image and NLP-based
+						algorithms as well as other supervised and unsupervised machine learning tasks.
+					</p>
+				</div>
+
 			</div>
 			<div class="card-footer bg-blue">
 				<a href="/projects.html" class="card-link">See Projects &raquo;</a>
@@ -42,9 +58,28 @@
 		<div class="card shadow">
 			<h4 class="card-header bg-blue">Experience</h4>
 			<div class="card-body bg-lightblue align-items-stretch">
-				<div class="card-text">
-					<p>I have accumulated a unique set of experiences through various roles, business types, locations and market circumstances.</p>
-					<p>I take pride in breaking complex efforts into manageable components and orchestrating solutions that otherwise seemed impossible.</p>
+				<div class="container col-11 mx-auto">
+					<div class="card-text">
+						<p>I have accumulated a unique set of experiences through various roles, business types, locations and market circumstances.</p>
+						<p>I take pride in breaking complex efforts into manageable components and orchestrating solutions that initially seemed impossible.</p>
+						<h5 class="card-title mb-0" style="font-weight: bold">Previous Roles</h5>
+						<div class="row">
+							<div class="col-12 col-lg-6">
+								<ul>
+									<li>Director of Finance / Controller</li>
+									<li>Director of Global Projects / M&A</li>
+									<li>Director of Process Management</li>
+								</ul>
+							</div>
+							<div class="col-12 col-md-6">
+								<ul>
+									<li>Chief Information Officer</li>
+									<li>Director of IT Regional Management</li>
+									<li>Senior Financial Analyst</li>
+								</ul>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 			<div class="card-footer bg-blue">
