--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -2,18 +2,21 @@
 <!--	<div class="col-1"></div>-->
 	<div class="jumbotron shadow w-100" id="intro">
 		<div class="row" style="" >
-			<div class="col-lg-1"></div>
-			<div class="mx-auto mb-2">
+			<div class="col-sm-1"></div>
+			<figure class="mx-auto mb-2">
 				<img class="shadow-lg rounded" style="max-width: 280px; max-height: 419px" width="100%" src="static/images/profile_photo.jpg">
-			</div>
-			<div class="col-sm-7 col-lg-6 mx-auto px-4" style="font-size: 18px;">
-				<p style="font-weight: bold"> Objective </p>
-				<p> I aim to combine my business experience and technical education to bridge the gap between business needs and modern technical capabilities.</p>
-				<p style="font-weight: bold"> Qualifications </p>
-				<p> I have a master's degree from Harvard in software engineering with a certificate in Data Science
-					with an undergraduate degree in Accounting.  I have accumulated
-					extensive experience in financial and technical management with a unique set of skills
-					which position me well to understand a broad scope of business functions and markets:</p>
+<!--				<figcaption>Mark McDonald</figcaption>-->
+			</figure>
+			<div class="col-sm-7 col-lg-6 mx-auto px-4 px-sm-0" style="font-size: 18px;">
+				<p style="font-weight: bold; font-size: large"> Introduction </p>
+				<p>I am a recent Harvard extension graduate with a master's degree in Software Engineering.
+					During my studies, I quickly recognized the transitional importance and enormous potential of
+					deep learning and artificial intelligence which motivated me to simultaneously pursue a certificate in Data
+					Science. </p>
+				<p>Building on a successful corporate career focused on financial, process and IT management, I intend to
+					combine my technical skills and business experience to find new ways of solving age-old business challenges.</p>
+				<p> I have accumulated extensive experience in business operations and management with a unique set of skills
+					that position me well to understand a broad scope of business functions and markets:</p>
 				<ul>
 					<li>Controller of multi-location large engineered equipment manufacturer</li>
 					<li>Led numerous US and international new acquisition integrations</li>
@@ -22,7 +25,7 @@
 					<li>Worked in Germany for 5 years (fluent in German) at Siemens Corporate headquarters</li>
 				</ul>
 			</div>
-			<div class="col-lg-1 col-xl-2"></div>
+			<div class="col-sm-1 col-lg-2"></div>
 		</div>
 
 	</div> <!-- jumbotron -->
