layout and formatting

--- a/_includes/headlines.html
+++ b/_includes/headlines.html
@@ -31,7 +31,7 @@
 <!--	<div class="col-12 col-md-4 px-1 my-2 d-flex">-->
 	<div class="w-100 my-3">
 		<div class="card shadow">
-			<h4 class="card-header bg-blue">Projects</h4>
+			<h4 class="card-header bg-blue">Academic Projects</h4>
 			<div class="card-body bg-lightblue align-items-stretch">
 				<div class="container col-11 mx-auto">
 					<p class="card-text ">
@@ -69,12 +69,14 @@
 									<li>Director of Finance / Controller</li>
 									<li>Director of Global Projects / M&A</li>
 									<li>Director of Process Management</li>
+									<li>Chief Information Officer</li>
 								</ul>
 							</div>
 							<div class="col-12 col-md-6">
 								<ul>
-									<li>Chief Information Officer</li>
 									<li>Director of IT Regional Management</li>
+									<li>Corporate Performance Controller</li>
+									<li>SAP Project Lead</li>
 									<li>Senior Financial Analyst</li>
 								</ul>
 							</div>
