--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -2,12 +2,11 @@
 <!--	<div class="col-1"></div>-->
 	<div class="jumbotron shadow w-100" id="intro">
 		<div class="row" style="" >
-			<div class="col-sm-1"></div>
-			<figure class="mx-auto mb-2">
-				<img class="shadow-lg rounded" style="max-width: 280px; max-height: 419px" width="100%" src="static/images/profile_photo.jpg">
-<!--				<figcaption>Mark McDonald</figcaption>-->
-			</figure>
-			<div class="col-sm-7 col-lg-6 mx-auto px-4 px-sm-0" style="font-size: 18px;">
+<!--			<div class="col-sm-1"></div>-->
+			<div class="mb-2 mx-auto ">
+				<img class="shadow-lg rounded" style="max-width: 308px; max-height: 461px" width="100%" src="static/images/profile_photo.jpg">
+			</div>
+			<div class="col-11 col-sm-10 col-md-8 col-lg-7 px-4 mx-auto" style="font-size: 18px;">
 				<p style="font-weight: bold; font-size: large"> Introduction </p>
 				<p>I am a recent Harvard extension graduate with a master's degree in Software Engineering.
 					During my studies, I quickly recognized the transitional importance and enormous potential of
@@ -25,7 +24,7 @@
 					<li>Worked in Germany for 5 years (fluent in German) at Siemens Corporate headquarters</li>
 				</ul>
 			</div>
-			<div class="col-sm-1 col-lg-2"></div>
+			<div class="col-lg-3"></div>
 		</div>
 
 	</div> <!-- jumbotron -->
