small content changes

--- a/_includes/headlines.html
+++ b/_includes/headlines.html
@@ -8,7 +8,7 @@
 			<div class="card-body bg-lightblue align-items-stretch">
 				<div class="container col-11 mx-auto">
 					<h5 class="card-title mb-0" style="font-weight: bold">Harvard Extension</h5>
-					<div class="card-text ">Master's Software Engineering</div>
+					<div class="card-text ">Master's Software Engineering (4.0)</div>
 					<div class="card-text ">Certificate: Data Science</div>
 					  <p></p>
 					<h5 class="card-title mb-0" style="font-weight: bold">Georgia State University</h5>
