updated resume and intro page

--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -8,14 +8,11 @@
 			</div>
 			<div class="col-11 col-sm-10 col-md-8 col-lg-7 px-4 mx-auto" style="font-size: 18px;">
 				<p style="font-weight: bold; font-size: large"> Introduction </p>
-				<p>I am a recent Harvard extension graduate with a master's degree in Software Engineering.
-					During my studies, I quickly recognized the transitional importance and enormous potential of
-					deep learning and artificial intelligence which motivated me to simultaneously pursue a certificate in Data
-					Science. </p>
-				<p>Building on a successful corporate career focused on financial, process and IT management, I intend to
-					combine my technical skills and business experience to find new ways of solving age-old business challenges.</p>
-				<p> I have accumulated extensive experience in business operations and management with a unique set of skills
-					that position me well to understand a broad scope of business functions and markets:</p>
+				<p>Seasoned, multidisciplinary, bilingual (English/German) executive with over twenty years proven record of improving and aligning business processes through technological advancements in small, medium, large and global organizations.</p>
+				<p>Passion for technology, finance, and problem solving. Focused, energetic, strong interpersonal skills and business judgment.</p>
+				<p>Recently completed degree in Software Engineering with intent to combine previous work experience with new skills in modern software design and data science.</p>
+
+				<p>In each my diverse set of experiences, I used technology to improve quality, speed and reliability:></p>
 				<ul>
 					<li>Controller of multi-location large engineered equipment manufacturer</li>
 					<li>Led numerous US and international new acquisition integrations</li>
@@ -23,6 +20,7 @@
 					<li>Digital transformation project leadership</li>
 					<li>Worked in Germany for 5 years (fluent in German) at Siemens Corporate headquarters</li>
 				</ul>
+				<p>I welcome the opportunity to speak and show you how I can apply my experience and skills to find new an unique solutions.</p>
 			</div>
 			<div class="col-lg-3"></div>
 		</div>
