updated home page text

--- a/_includes/headlines.html
+++ b/_includes/headlines.html
@@ -66,18 +66,19 @@
 						<div class="row">
 							<div class="col-12 col-lg-6">
 								<ul>
+									<li>Senior Director - AI in Finance</li>
 									<li>Director of Finance / Controller</li>
 									<li>Director of Global Projects / M&A</li>
 									<li>Director of Process Management</li>
-									<li>Chief Information Officer</li>
 								</ul>
 							</div>
 							<div class="col-12 col-md-6">
 								<ul>
-									<li>Director of IT Regional Management</li>
-									<li>Corporate Performance Controller</li>
+									<li>Chief Information Officer</li>
+									<li>Regional IT Director</li>
+									<li>Global Finance Performance Controller</li>
 									<li>SAP Project Lead</li>
-									<li>Senior Financial Analyst</li>
+									
 								</ul>
 							</div>
 						</div>
