--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -8,9 +8,9 @@
 			</div>
 			<div class="col-11 col-sm-10 col-md-8 col-lg-7 px-4 mx-auto" style="font-size: 18px;">
 				<p style="font-weight: bold; font-size: large"> Introduction </p>
-				<p>Seasoned, multidisciplinary, bilingual (English/German) executive with over twenty years proven record of improving and aligning business processes through technological advancements in small, medium, large and global organizations.</p>
+				<p>Seasoned, multidisciplinary executive with over twenty years proven record of improving and aligning business processes through technological advancements in small, medium, large and global organizations.</p>
 				<p>Passion for technology, finance, and problem solving. Focused, energetic, strong interpersonal skills and business judgment.</p>
-				<p>Recently completed degree in Software Engineering with intent to combine previous work experience with new skills in modern software design and data science.</p>
+				<p>My objective is to lead business operations teams into a new era of efficiency through a combination of modern data science solutions and lean business operations.  Using a unique mix of professional leadership, operational finance and advanced technology skills, I have a demonstrated ability to elevate team productivity and business value.</p>
 				<p>I welcome the opportunity to speak and show you how I can apply my experience and skills to find new an unique solutions.</p>
 			</div>
 			<div class="col-lg-3"></div>
