updated home page text

--- a/_includes/headlines.html
+++ b/_includes/headlines.html
@@ -67,7 +67,7 @@
 							<div class="col-12 col-lg-6">
 								<ul>
 									<li>Senior Director - AI in Finance</li>
-									<li>Director of Finance / Controller</li>
+									<li>Financial Director</li>
 									<li>Director of Global Projects / M&A</li>
 									<li>Director of Process Management</li>
 								</ul>
